Update CommandManager lib