@@ -17,6 +17,18 @@ sourceCompatibility = 14
 targetCompatibility = 14
 compileJava.options.encoding = "UTF-8"
 
+tasks.withType(JavaCompile) {
+	options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test) {
+	jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec) {
+	jvmArgs += '--enable-preview'
+}
+
 configurations { extra }
 
 repositories
